Update README.md with initial project specifications, add html form and result outline to index.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <header>
+      <h1>Choose A Language</h1>
+      <p>Are you interested in beginning to program, but overwhelmed by the many different programming languages to choose from? Well don't worry, you're not alone. With so many options, it's hard to know where to start, but don't worry! After you answer a few questions, we'll be able to determine which programming language might be the right one for you!</p>
+      <p>Just a note: Many languages use similar syntax, meaning that once you've learned one, it will be easier to pick up another. So it's not too important which one you choose. What matters most is that you pick one and get started. Good luck!</p>
+    </header>
+    <div class="quiz">
+      <form action="" id="quiz-form">
+
+        <button class="btn btn-info" type="submit">Get Your Results!</button>
+      </form>
+
+      <div class="results">
+        
+      </div>
+    </div>
+  </div>
 </body>
 </html>
