Add questions in rows and columns to index.html.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,207 @@
     </header>
     <div class="quiz">
       <form action="" id="quiz-form">
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #1</h3>
+            <p>What is your favorite meal of the day?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="" checked>
+                a) Breakfast
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) Lunch
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) Dinner
+              </label>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #2</h3>
+            <p>Where would you most like to travel to?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) Chiang Mai, Thailand
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) Tanzania, East Africa
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) Nowhere. You don't enjoy traveling.
+              </label>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #3</h3>
+            <p>As a child, which of these did you most want to be when you grew up?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) An astronaut
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) A marine biologist
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) A private eye (detective)
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #4</h3>
+            <p>Which animal do you like best?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) The majestic (but very dangerous) hippo
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) The sleek and mysterious panther
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) The nine-banded armadilo (a carrier of the bacteria that causes leprosy)
+              </label>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #5</h3>
+            <p>What is your favorite music group from the 90s?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) Pearl Jam
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) TLC
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) Spice Girls
+              </label>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #6</h3>
+            <p>Which salary range is most ideal to you?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) $200,000+: I want to be a modern day Rockefeller
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) $30,000 - $80,000: I want enough to live off of, but don't need a lot
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) $0: I don't want a lot of money, I just want to live in a van down by theriver
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #7</h3>
+            <p>Which famous person would you like to spend the day with?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) Donald Glover
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) Alison Brie
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) Kumail Nanjiani
+              </label>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <h3>Question #8</h3>
+            <p>What is one thing you think might be fun, but have been too afraid to try?</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                a) Skydiving
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                b) Rollerblading
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="language" value="">
+                c) Fire dancing / Poi
+              </label>
+            </div>
+          </div>
+        </div>
 
         <button class="btn btn-info" type="submit">Get Your Results!</button>
       </form>
 
+    </div> <!-- end of div around quiz form -->
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="results">
-        
+
       </div>
     </div>
   </div>
