Add properties a,b&c to input value attributes.

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <p>What is your favorite meal of the day?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="" checked>
+                <input type="radio" name="language" value="a" checked>
                 a) Breakfast
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) Lunch
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) Dinner
               </label>
             </div>
@@ -46,19 +46,19 @@
             <p>Where would you most like to travel to?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) Chiang Mai, Thailand
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) Tanzania, East Africa
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) Nowhere. You don't enjoy traveling.
               </label>
             </div>
@@ -68,19 +68,19 @@
             <p>As a child, which of these did you most want to be when you grew up?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) An astronaut
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) A marine biologist
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) A private eye (detective)
               </label>
             </div>
@@ -92,19 +92,19 @@
             <p>Which animal do you like best?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) The majestic (but very dangerous) hippo
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) The sleek and mysterious panther
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) The nine-banded armadilo (a carrier of the bacteria that causes leprosy)
               </label>
             </div>
@@ -114,19 +114,19 @@
             <p>What is your favorite music group from the 90s?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) Pearl Jam
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) TLC
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) Spice Girls
               </label>
             </div>
@@ -136,19 +136,19 @@
             <p>Which salary range is most ideal to you?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) $200,000+: I want to be a modern day Rockefeller
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) $30,000 - $80,000: I want enough to live off of, but don't need a lot
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) $0: I don't want a lot of money, I just want to live in a van down by theriver
               </label>
             </div>
@@ -160,19 +160,19 @@
             <p>Which famous person would you like to spend the day with?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) Donald Glover
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) Alison Brie
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) Kumail Nanjiani
               </label>
             </div>
@@ -182,19 +182,19 @@
             <p>What is one thing you think might be fun, but have been too afraid to try?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="a">
                 a) Skydiving
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="b">
                 b) Rollerblading
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="">
+                <input type="radio" name="language" value="c">
                 c) Fire dancing / Poi
               </label>
             </div>
