--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
       <p>Just a note: Many languages use similar syntax, meaning that once you've learned one, it will be easier to pick up another. So it's not too important which one you choose. What matters most is that you pick one and get started. Good luck!</p>
     </header>
     <div class="quiz">
-      <form action="" id="quiz-form">
+      <form action="#" id="quiz-form">
         <div class="row">
           <div class="col-md-4 col-sm-12">
             <h3>Question #1</h3>
             <p>What is your favorite meal of the day?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a" checked>
+                <input type="radio" name="language" value="0" checked>
                 a) Breakfast
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) Lunch
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) Dinner
               </label>
             </div>
@@ -46,19 +46,19 @@
             <p>Where would you most like to travel to?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) Chiang Mai, Thailand
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) Tanzania, East Africa
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) Nowhere. You don't enjoy traveling.
               </label>
             </div>
@@ -68,19 +68,19 @@
             <p>As a child, which of these did you most want to be when you grew up?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) An astronaut
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) A marine biologist
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) A private eye (detective)
               </label>
             </div>
@@ -92,19 +92,19 @@
             <p>Which animal do you like best?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) The majestic (but very dangerous) hippo
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) The sleek and mysterious panther
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) The nine-banded armadilo (a carrier of the bacteria that causes leprosy)
               </label>
             </div>
@@ -114,19 +114,19 @@
             <p>What is your favorite music group from the 90s?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) Pearl Jam
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) TLC
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) Spice Girls
               </label>
             </div>
@@ -136,19 +136,19 @@
             <p>Which salary range is most ideal to you?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) $200,000+: I want to be a modern day Rockefeller
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) $30,000 - $80,000: I want enough to live off of, but don't need a lot
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) $0: I don't want a lot of money, I just want to live in a van down by theriver
               </label>
             </div>
@@ -160,19 +160,19 @@
             <p>Which famous person would you like to spend the day with?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) Donald Glover
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) Alison Brie
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) Kumail Nanjiani
               </label>
             </div>
@@ -182,19 +182,19 @@
             <p>What is one thing you think might be fun, but have been too afraid to try?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="a">
+                <input type="radio" name="language" value="0">
                 a) Skydiving
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="b">
+                <input type="radio" name="language" value="1">
                 b) Rollerblading
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="c">
+                <input type="radio" name="language" value="2">
                 c) Fire dancing / Poi
               </label>
             </div>
@@ -203,22 +203,14 @@
 
         <button class="btn btn-info" type="submit">Get Your Results!</button>
       </form>
-
     </div> <!-- end of div around quiz form -->
 
-
-
-
-
-
-
-
-
-
-
-
       <div class="results">
-
+        <p class="python">Python:</p>
+        <p class="ruby">Ruby:</p>
+        <p class="javascript">JavaScript:</p>
+        <p class="swift">Swift:</p>
+        <p class="csharp">C#:</p>
       </div>
     </div>
   </div>
