Update properties for all name attributes, making each specific to its radio button group.

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
             <p>What is your favorite meal of the day?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0" checked>
-                a) Breakfast
+                <input type="radio" name="meal" value="0" checked>
+                a) Second breakfast
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
-                b) Lunch
+                <input type="radio" name="meal" value="1">
+                b) Elevenses
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
-                c) Dinner
+                <input type="radio" name="meal" value="2">
+                c) Afternoon tea
               </label>
             </div>
           </div>
@@ -46,19 +46,19 @@
             <p>Where would you most like to travel to?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="location" value="0">
                 a) Chiang Mai, Thailand
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="location" value="1">
                 b) Tanzania, East Africa
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
+                <input type="radio" name="location" value="2">
                 c) Nowhere. You don't enjoy traveling.
               </label>
             </div>
@@ -68,19 +68,19 @@
             <p>As a child, which of these did you most want to be when you grew up?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="occupation" value="0">
                 a) An astronaut
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="occupation" value="1">
                 b) A marine biologist
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
+                <input type="radio" name="occupation" value="2">
                 c) A private eye (detective)
               </label>
             </div>
@@ -92,19 +92,19 @@
             <p>Which animal do you like best?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="animal" value="0">
                 a) The majestic (but very dangerous) hippo
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="animal" value="1">
                 b) The sleek and mysterious panther
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
+                <input type="radio" name="animal" value="2">
                 c) The nine-banded armadilo (a carrier of the bacteria that causes leprosy)
               </label>
             </div>
@@ -114,19 +114,19 @@
             <p>What is your favorite music group from the 90s?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="music-group" value="0">
                 a) Pearl Jam
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="music-group" value="1">
                 b) TLC
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
+                <input type="radio" name="music-group" value="2">
                 c) Spice Girls
               </label>
             </div>
@@ -136,19 +136,19 @@
             <p>Which salary range is most ideal to you?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="salary" value="0">
                 a) $200,000+: I want to be a modern day Rockefeller
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="salary" value="1">
                 b) $30,000 - $80,000: I want enough to live off of, but don't need a lot
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
+                <input type="radio" name="salary" value="2">
                 c) $0: I don't want a lot of money, I just want to live in a van down by theriver
               </label>
             </div>
@@ -160,19 +160,19 @@
             <p>Which famous person would you like to spend the day with?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="celebrity" value="0">
                 a) Donald Glover
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="celebrity" value="1">
                 b) Alison Brie
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
+                <input type="radio" name="celebrity" value="2">
                 c) Kumail Nanjiani
               </label>
             </div>
@@ -182,20 +182,20 @@
             <p>What is one thing you think might be fun, but have been too afraid to try?</p>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="0">
+                <input type="radio" name="activity" value="0">
                 a) Skydiving
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="1">
+                <input type="radio" name="activity" value="1">
                 b) Rollerblading
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="language" value="2">
-                c) Fire dancing / Poi
+                <input type="radio" name="activity" value="2">
+                c) Fire dancing
               </label>
             </div>
           </div>
