Delete Poi from answer C, question #8 in index.html, add variables to scripts.js to select value of users answer.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="location" value="2">
-                c) Nowhere. You don't enjoy traveling.
+                c) Nowhere. I don't enjoy traveling.
               </label>
             </div>
           </div>
