Hide results div and child paragraphs in index.html, update scripts.js to show user results in index.html upon form submission.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </form>
     </div> <!-- end of div around quiz form -->
 
-      <div class="results">
+      <div id="results">
         <p class="python">Python:</p>
         <p class="ruby">Ruby:</p>
         <p class="swift">Swift:</p>
