Add comments to scripts.js, insert paragraphs about python, ruby and c# into results div of index.html.

--- a/index.html
+++ b/index.html
@@ -206,10 +206,13 @@
     </div> <!-- end of div around quiz form -->
 
       <div id="results">
-        <p class="python">Python:</p>
-        <p class="ruby">Ruby:</p>
+        <p class="python"><span class="name-here"></span>, you may want to consider becoming a Python developer! Python is widely used in Machine Learning and AI (Artificial Intelligence). According to an <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>, Python currently has one of the highest number of job openings on average and Python developers are some of the best paid. Similarly to Ruby, Python is not ideal for mobile development, but if that's not your focus, it could be just the right language for you!</p>
+
+        <p class="ruby"><span class="name-here"></span>, you may enjoy learning Ruby! Ruby is used to make apps for Arduino and Raspberry Pi, and both New York city and Seattle have some of the highest salaries for Ruby developers according to ZipRecruiter. This language is used often by startups due to how easy it is to quickly build out projects. Some possible downsides to Ruby are that it is less ideal for creating mobile apps and there were only 4,617 job listings on glassdoor as of May 2020.</p>
+
         <p class="swift">Swift:</p>
-        <p class="csharp">C#:</p>
+
+        <p class="csharp"><span class="name-here"></span>, C# may be the programming language for you! C# is used for Windows development and as of May 2020 there are a grand total of 35,887 job postings for C# developers on Glassdoor. According to Indeed, average salaries range from $76,309 to $132,322. Because this language is so widely used and has been around for a long time, it's well documented, with plenty of code samples out there to help new developers learn. Since Microsoft's headquarters are in Redmond, WA., you may have luck finding jobs for C# developers in Seattle!</p>
       </div>
     </div>
   </div>
