Update content and format for python, ruby and c# in results div of index.html.

--- a/index.html
+++ b/index.html
@@ -206,13 +206,26 @@
     </div> <!-- end of div around quiz form -->
 
       <div id="results">
-        <p class="python"><span class="name-here"></span>, you may want to consider becoming a Python developer! Python is widely used in Machine Learning and AI (Artificial Intelligence). According to an <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>, Python currently has one of the highest number of job openings on average and Python developers are some of the best paid. Similarly to Ruby, Python is not ideal for mobile development, but if that's not your focus, it could be just the right language for you!</p>
+        <div class="python">
+          <h3><span class="user-name"></span>,</h3>
+          <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning, and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>), currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. Not bad!</p>
+        </div>
 
-        <p class="ruby"><span class="name-here"></span>, you may enjoy learning Ruby! Ruby is used to make apps for Arduino and Raspberry Pi, and both New York city and Seattle have some of the highest salaries for Ruby developers according to ZipRecruiter. This language is used often by startups due to how easy it is to quickly build out projects. Some possible downsides to Ruby are that it is less ideal for creating mobile apps and there were only 4,617 job listings on glassdoor as of May 2020.</p>
+        <div class="ruby">
+          <h3><span class="user-name"></span>,</h3>
+          <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative, program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use because it's an excellent language for quickly building out projects. Give it a try!</p>
+        </div>
 
-        <p class="swift">Swift:</p>
+        <div class="swift">
+          <h3><span class="user-name"></span>,</h3>
+          <p>Based on your score, our algorithm has determined that you should begin with Swift. </p>
+        </div>
 
-        <p class="csharp"><span class="name-here"></span>, C# may be the programming language for you! C# is used for Windows development and as of May 2020 there are a grand total of 35,887 job postings for C# developers on Glassdoor. According to Indeed, average salaries range from $76,309 to $132,322. Because this language is so widely used and has been around for a long time, it's well documented, with plenty of code samples out there to help new developers learn. Since Microsoft's headquarters are in Redmond, WA., you may have luck finding jobs for C# developers in Seattle!</p>
+        <div class="csharp">
+          <h3><span class="user-name"></span>,</h3>
+          <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used, and has been around for a long time. That means there's lots of documentation out there, lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, salaries range from $76,309 to $132,322. Good luck!</p>
+        </div>
+
       </div>
     </div>
   </div>
