Add form field to index.html for user to input first name, use scripts.js to display user first name in results div.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <div class="quiz">
       <form action="#" id="quiz-form">
         <div class="row">
+          <div class="form-group col-md-6">
+            <label for="first-name">Enter your first name:</label>
+            <input type="text" id="first-name" class="form-control" required>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-md-4 col-sm-12">
             <h3>Question #1</h3>
             <p>What is your favorite meal of the day?</p>
@@ -218,7 +224,7 @@
 
         <div class="swift">
           <h3><span class="user-name"></span>,</h3>
-          <p>Based on your score, our algorithm has determined that you should begin with Swift. </p>
+          <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're an fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. Welcome to the future!</p>
         </div>
 
         <div class="csharp">
