--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <div class="quiz">
       <form action="#" id="quiz-form">
-        <div class="row">
-          <div class="form-group col-md-6">
+        <div class="row name-div">
+          <div class="form-group">
             <label for="first-name">Please enter your first name:</label>
             <input type="text" id="first-name" class="form-control" required>
           </div>
@@ -212,29 +212,31 @@
       </form>
     </div> <!-- end of div around quiz form -->
 
-      <div id="results">
-        <div class="python">
-          <h3><span class="user-name"></span>,</h3>
-          <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning, and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>), currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. Not bad!</p>
-        </div>
+    <div id="results">
+      <div class="python">
+        <h3><span class="user-name"></span>,</h3>
+        <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning, and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>), currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. Not bad!</p>
+      </div>
 
-        <div class="ruby">
-          <h3><span class="user-name"></span>,</h3>
-          <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative, program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use because it's an excellent language for quickly building out projects. Give it a try!</p>
-        </div>
+      <div class="ruby">
+        <h3><span class="user-name"></span>,</h3>
+        <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative, program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use because it's an excellent language for quickly building out projects. Give it a try!</p>
+      </div>
 
-        <div class="swift">
-          <h3><span class="user-name"></span>,</h3>
-          <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're an fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. Welcome to the future!</p>
-        </div>
+      <div class="swift">
+        <h3><span class="user-name"></span>,</h3>
+        <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're an fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. Welcome to the future!</p>
+      </div>
 
-        <div class="csharp">
-          <h3><span class="user-name"></span>,</h3>
-          <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used, and has been around for a long time. That means there's lots of documentation out there, lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, salaries range from $76,309 to $132,322. Good luck!</p>
-        </div>
-
+      <div class="csharp">
+        <h3><span class="user-name"></span>,</h3>
+        <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used, and has been around for a long time. That means there's lots of documentation out there, lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, salaries range from $76,309 to $132,322. Good luck!</p>
       </div>
     </div>
   </div>
+  <footer>
+    <p>Copyright: &copy; Brittany Lindgren, 2020.</p>
+    <p class="credits">Background photo by Jess Bailey on Unsplash</p>
+  </footer>
 </body>
 </html>
