Add README.md specification #7, update scripts.js to return two values from addUserPoints function, update html results div to show user score.

--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
     </div> <!-- end of div around quiz form -->
 
     <div id="results">
+      <h3>Your score: <span class="score"></span></h3>
+      <p>*Each of your answers was assigned a value. These values were added together when you submitted your form, resulting in your score above!</p>
       <div class="python">
         <h3><span class="user-name"></span>,</h3>
         <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning, and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>), currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. Not bad!</p>
